# qyntara

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CHECKPOINT_13_SUMMARY.md  CHECKPOINT_25_FINAL_REPORT.md  CHECKPOINT_25_INTEGRATION_ANALYSIS.md  CHECKPOINT_25_VERIFICATION_SUMMARY.md  CHECK_DEPLOY_STATUS.md  CLEANUP_AND_SECURITY_SUMMARY.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CNAME  CONTRIBUTING.md  DASHBOARD_API_SETUP.md  DASHBOARD_DEPLOY_INSTRUCTIONS.md  DASHBOARD_UPDATES.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  DEPLOY_FINAL_STATUS.md  DEPLOY_GUIDE.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_NEXT_STEPS.md  DEPLOY_STATUS.md  DEPLOY_SUCCESS_v2.md  DO_PUSH.sh  Dockerfile  Dockerfile.lambda  END_TO_END_VALIDATION.md  ENSEMBLE_DEPLOYMENT_GUIDE.md  FEATURES_IMPLEMENTED.md  FINAL_SYSTEM_VALIDATION.md  GITHUB_SETUP_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LIMPEZA_COMPLETA.md  MODEL_MONITORING_RETRAIN.md  (+43 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v2.0.0.md  REPOSITORY_DESCRIPTION.md  SETUP.md  TROUBLESHOOTING.md  dependabot.yml  settings.yml
assets/: ActivationChecklist-Bt76W5ej.js  AdminAgentsPage-BQP0bwl0.js  AdminAgentsPage-C28FMalU.js  AdminAgentsPage-CCtrrjxo.js  AdminAgentsPage-CYncn1vm.js  AdminAgentsPage-D-_gB8DQ.js  AdminAgentsPage-DXS8BbCf.js  AdminAgentsPage-jojdVWV3.js  AdminChatPage-5ctrXNw5.js  AdminChatPage-BdOBhgw5.js  AdminChatPage-BiFFu5EG.js  AdminChatPage-Bv86NBdb.js  AdminChatPage-C8chMgYS.js  AdminChatPage-CbXASK4y.js  (+312 more)
(+1227 files in other folders)
