[project]
name = "predikt"
version = "0.1.0"
description = "AI-Powered Prediction Market Intelligence Platform"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "torch>=2.2.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.5.0",
    "boto3>=1.34.0",
    "python-dateutil>=2.8.0",
    "feedparser>=6.0.0",
    "apscheduler>=3.10.0",
    "pyjwt[crypto]>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "stripe>=8.0.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["ruff", "black", "pytest", "pytest-asyncio"]

[tool.ruff]
line-length = 100
target-version = "py311"
